[build-system]
requires = ["uv_build>=0.9.18"]
build-backend = "uv_build"

[project]
name = "helicopter-parent"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"

[project.scripts]
helicopter-parent = "helicopter_parent.controller:main"
helicopter-client = "helicopter_parent.client:main"

[dependency-groups]
dev = ["ipython", "ruff"]


[tool.uv.build-backend]
module-root = ""
module-name = "helicopter_parent"
