[build-system]
requires = ["uv_build>=0.9.18"]
build-backend = "uv_build"

[project]
name = "helicopter-parent"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"

[project.scripts]
helicopter-parent = "helicopter_parent.controller:main"
helicopter-client = "helicopter_parent.client:main"

[dependency-groups]
test = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-timeout>=2.2",
    "pytest-rerunfailures>=16.1"
]
dev = ["ipython", "ruff", {include-group = "test"}]


[tool.uv.build-backend]
module-root = ""
module-name = "helicopter_parent"
